--- a/star-score/star.html
+++ b/star-score/star.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="star.css" />
   </head>
   <body>
+    <input type="hidden" id="star-score" value="0" />
     <div class="star-box">
       <img id="star1" class="empty-star" src="empty.png" alt="empty_star" />
       <img id="star2" class="empty-star" src="empty.png" alt="empty_star" />
